--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Check Tickets
         uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
-          product-id: 204756
+          product-id: 204679
           schedule-id: 100001
-          seat-id: 1_0
+          block-id: 55
           slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           message: '<@U12345678> 달려달려~'
