--- a/action.yml
+++ b/action.yml
@@ -8,8 +8,8 @@ inputs:
   schedule-id:
     description: 'Schedule ID of Target Ticket'
     required: true
-  seat-id:
-    description: 'Seat Id of Target Ticket'
+  block-id:
+    description: 'Block Id of Target Ticket'
     required: true
   slack-incoming-webhook-url:
     description: 'URL of Slack Incoming Webhook'
